// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Sidebar _Annidata 1`] = `
<div>
  <div
    class="sidebar-wrapper it-line-left-side"
  >
    <div
      class="sidebar-linklist-wrapper"
    >
      <div
        class="link-list-wrapper"
      >
        <ul
          class="link-list"
        >
          <li>
            <a
              aria-expanded="false"
              class="right-icon large medium list-item"
              role="button"
            >
              <span
                class="list-item-title-icon-wrapper"
              >
                <span>
                  Link list 1 
                </span>
                <svg
                  aria-hidden="true"
                  class="icon right icon-primary"
                  enable-background="new 0 0 24 24"
                  role="img"
                  viewBox="0 0 24 24"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    icon
                  </title>
                  <path
                    d="M11.6 15.4 6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                  />
                </svg>
              </span>
            </a>
          </li>
          <div
            class="collapse"
          >
            <ul
              class="link-sublist"
            >
              <li>
                <a
                  class="list-item"
                >
                  <span>
                    Link list 4 
                  </span>
                </a>
              </li>
              <li>
                <a
                  class="list-item"
                >
                  <span>
                    Link list 5 
                  </span>
                </a>
              </li>
              <li>
                <a
                  class="list-item"
                >
                  <span>
                    Link list 6 
                  </span>
                </a>
              </li>
            </ul>
          </div>
          <li>
            <a
              aria-expanded="false"
              class="right-icon large medium list-item"
              role="button"
            >
              <span
                class="list-item-title-icon-wrapper"
              >
                <span>
                  Link list 2 
                </span>
                <svg
                  aria-hidden="true"
                  class="icon right icon-primary"
                  enable-background="new 0 0 24 24"
                  role="img"
                  viewBox="0 0 24 24"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    icon
                  </title>
                  <path
                    d="M11.6 15.4 6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                  />
                </svg>
              </span>
            </a>
          </li>
          <div
            class="collapse"
          >
            <ul
              class="link-sublist"
            >
              <li>
                <a
                  class="list-item"
                >
                  <span>
                    Link list 7 
                  </span>
                </a>
              </li>
              <li>
                <a
                  class="list-item"
                >
                  <span>
                    Link list 8 
                  </span>
                </a>
              </li>
              <li>
                <a
                  class="list-item"
                >
                  <span>
                    Link list 9 
                  </span>
                </a>
              </li>
            </ul>
          </div>
          <li>
            <a
              aria-expanded="false"
              class="right-icon large medium list-item"
              role="button"
            >
              <span
                class="list-item-title-icon-wrapper"
              >
                <span>
                  Link list 3 
                </span>
                <svg
                  aria-hidden="true"
                  class="icon right icon-primary"
                  enable-background="new 0 0 24 24"
                  role="img"
                  viewBox="0 0 24 24"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    icon
                  </title>
                  <path
                    d="M11.6 15.4 6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                  />
                </svg>
              </span>
            </a>
          </li>
          <div
            class="collapse"
          >
            <ul
              class="link-sublist"
            >
              <li>
                <a
                  class="list-item"
                >
                  <span>
                    Link list 10 
                  </span>
                </a>
              </li>
              <li>
                <a
                  class="list-item"
                >
                  <span>
                    Link list 11 
                  </span>
                </a>
              </li>
              <li>
                <a
                  class="list-item"
                >
                  <span>
                    Link list 12 
                  </span>
                </a>
              </li>
            </ul>
          </div>
          <div
            class="sidebar-linklist-wrapper linklist-secondary"
          />
          <li>
            <a
              class="list-item"
            >
              <span>
                Secondary item
              </span>
            </a>
          </li>
          <li>
            <a
              class="active list-item"
            >
              <span>
                Secondary item active
              </span>
            </a>
          </li>
          <li>
            <a
              class="disabled list-item"
            >
              <span>
                Secondary item disabled
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Sidebar _ConIcona 1`] = `
<div>
  <div
    class="sidebar-wrapper"
  >
    <div
      class="sidebar-linklist-wrapper"
    >
      <div
        class="link-list-wrapper"
      >
        <ul
          class="link-list"
        >
          <li>
            <h3
              class="header list-item"
            >
              HEADER
            </h3>
          </li>
          <li>
            <a
              class="left-icon active medium list-item"
            >
              <span
                class="list-item-title-icon-wrapper"
              >
                <svg
                  aria-hidden="true"
                  class="icon icon-primary icon-sm"
                  enable-background="new 0 0 24 24"
                  role="img"
                  viewBox="0 0 24 24"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    icon
                  </title>
                  <path
                    d="m12 4.9 1.5 4.6.2.7h5.7l-4 2.9-.6.4.2.7 1.5 4.7-3.9-2.9-.6-.4-.6.4-3.9 2.9L9 14.2l.2-.7-.6-.4-4-2.9h5.7l.2-.7L12 4.9m0-3.2L9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
                  />
                </svg>
                <span>
                  Link list active
                </span>
              </span>
            </a>
          </li>
          <li>
            <a
              class="left-icon disabled medium list-item"
            >
              <span
                class="list-item-title-icon-wrapper"
              >
                <svg
                  aria-hidden="true"
                  class="icon icon-primary icon-sm"
                  enable-background="new 0 0 24 24"
                  role="img"
                  viewBox="0 0 24 24"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    icon
                  </title>
                  <path
                    d="m12 4.9 1.5 4.6.2.7h5.7l-4 2.9-.6.4.2.7 1.5 4.7-3.9-2.9-.6-.4-.6.4-3.9 2.9L9 14.2l.2-.7-.6-.4-4-2.9h5.7l.2-.7L12 4.9m0-3.2L9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
                  />
                </svg>
                <span>
                  Link list disabled
                </span>
              </span>
            </a>
          </li>
          <li>
            <a
              class="left-icon medium list-item"
            >
              <span
                class="list-item-title-icon-wrapper"
              >
                <svg
                  aria-hidden="true"
                  class="icon icon-primary icon-sm"
                  enable-background="new 0 0 24 24"
                  role="img"
                  viewBox="0 0 24 24"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    icon
                  </title>
                  <path
                    d="m12 4.9 1.5 4.6.2.7h5.7l-4 2.9-.6.4.2.7 1.5 4.7-3.9-2.9-.6-.4-.6.4-3.9 2.9L9 14.2l.2-.7-.6-.4-4-2.9h5.7l.2-.7L12 4.9m0-3.2L9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
                  />
                </svg>
                <span>
                  Link list
                </span>
              </span>
            </a>
          </li>
          <li>
            <a
              class="left-icon medium list-item"
            >
              <span
                class="list-item-title-icon-wrapper"
              >
                <svg
                  aria-hidden="true"
                  class="icon icon-primary icon-sm"
                  enable-background="new 0 0 24 24"
                  role="img"
                  viewBox="0 0 24 24"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    icon
                  </title>
                  <path
                    d="m12 4.9 1.5 4.6.2.7h5.7l-4 2.9-.6.4.2.7 1.5 4.7-3.9-2.9-.6-.4-.6.4-3.9 2.9L9 14.2l.2-.7-.6-.4-4-2.9h5.7l.2-.7L12 4.9m0-3.2L9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
                  />
                </svg>
                <span>
                  Link list
                </span>
              </span>
            </a>
          </li>
        </ul>
      </div>
      <div
        class="sidebar-linklist-wrapper linklist-secondary"
      />
      <div
        class="link-list-wrapper"
      >
        <ul
          class="link-list"
        >
          <li>
            <a
              class="list-item"
            >
              <span>
                Secondary item
              </span>
            </a>
          </li>
          <li>
            <a
              class="active list-item"
            >
              <span>
                Secondary item active
              </span>
            </a>
          </li>
          <li>
            <a
              class="disabled list-item"
            >
              <span>
                Secondary item disabled
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Sidebar BasicSidebar 1`] = `
<div>
  <div
    class="sidebar-wrapper"
  >
    <div
      class="sidebar-linklist-wrapper"
    >
      <div
        class="link-list-wrapper"
      >
        <ul
          class="link-list"
        >
          <li>
            <h3
              class="header list-item"
            >
              HEADER
            </h3>
          </li>
          <li>
            <a
              class="active medium list-item"
            >
              <span>
                Link list active
              </span>
            </a>
          </li>
          <li>
            <a
              class="disabled medium list-item"
            >
              <span>
                Link list disabled
              </span>
            </a>
          </li>
          <li>
            <a
              class="medium list-item"
            >
              <span>
                Link list
              </span>
            </a>
          </li>
          <li>
            <a
              class="medium list-item"
            >
              <span>
                Link list
              </span>
            </a>
          </li>
        </ul>
      </div>
      <div
        class="sidebar-linklist-wrapper linklist-secondary"
      />
      <div
        class="link-list-wrapper"
      >
        <ul
          class="link-list"
        >
          <li>
            <a
              class="list-item"
            >
              <span>
                Secondary item
              </span>
            </a>
          </li>
          <li>
            <a
              class="active list-item"
            >
              <span>
                Secondary item active
              </span>
            </a>
          </li>
          <li>
            <a
              class="disabled list-item"
            >
              <span>
                Secondary item disabled
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Sidebar ConLineaADestra 1`] = `
<div>
  <div
    class="sidebar-wrapper it-line-right-side"
  >
    <div
      class="sidebar-linklist-wrapper"
    >
      <div
        class="link-list-wrapper"
      >
        <ul
          class="link-list"
        >
          <li>
            <h3
              class="header list-item"
            >
              HEADER
            </h3>
          </li>
          <li>
            <a
              class="active medium list-item"
            >
              <span>
                Link list active
              </span>
            </a>
          </li>
          <li>
            <a
              class="disabled medium list-item"
            >
              <span>
                Link list disabled
              </span>
            </a>
          </li>
          <li>
            <a
              class="medium list-item"
            >
              <span>
                Link list
              </span>
            </a>
          </li>
          <li>
            <a
              class="medium list-item"
            >
              <span>
                Link list
              </span>
            </a>
          </li>
        </ul>
      </div>
      <div
        class="sidebar-linklist-wrapper linklist-secondary"
      />
      <div
        class="link-list-wrapper"
      >
        <ul
          class="link-list"
        >
          <li>
            <a
              class="list-item"
            >
              <span>
                Secondary item
              </span>
            </a>
          </li>
          <li>
            <a
              class="active list-item"
            >
              <span>
                Secondary item active
              </span>
            </a>
          </li>
          <li>
            <a
              class="disabled list-item"
            >
              <span>
                Secondary item disabled
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Sidebar ConLineaASinistra 1`] = `
<div>
  <div
    class="sidebar-wrapper it-line-left-side"
  >
    <div
      class="sidebar-linklist-wrapper"
    >
      <div
        class="link-list-wrapper"
      >
        <ul
          class="link-list"
        >
          <li>
            <h3
              class="header list-item"
            >
              HEADER
            </h3>
          </li>
          <li>
            <a
              class="active medium list-item"
            >
              <span>
                Link list active
              </span>
            </a>
          </li>
          <li>
            <a
              class="disabled medium list-item"
            >
              <span>
                Link list disabled
              </span>
            </a>
          </li>
          <li>
            <a
              class="medium list-item"
            >
              <span>
                Link list
              </span>
            </a>
          </li>
          <li>
            <a
              class="medium list-item"
            >
              <span>
                Link list
              </span>
            </a>
          </li>
        </ul>
      </div>
      <div
        class="sidebar-linklist-wrapper linklist-secondary"
      />
      <div
        class="link-list-wrapper"
      >
        <ul
          class="link-list"
        >
          <li>
            <a
              class="list-item"
            >
              <span>
                Secondary item
              </span>
            </a>
          </li>
          <li>
            <a
              class="active list-item"
            >
              <span>
                Secondary item active
              </span>
            </a>
          </li>
          <li>
            <a
              class="disabled list-item"
            >
              <span>
                Secondary item disabled
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Sidebar SidebarVersioneScura 1`] = `
<div>
  <div
    class="sidebar-wrapper theme-dark"
  >
    <div
      class="sidebar-linklist-wrapper"
    >
      <div
        class="link-list-wrapper"
      >
        <ul
          class="link-list"
        >
          <li>
            <h3
              class="header list-item"
            >
              HEADER
            </h3>
          </li>
          <li>
            <a
              class="active medium list-item"
            >
              <span>
                Link list active
              </span>
            </a>
          </li>
          <li>
            <a
              class="disabled medium list-item"
            >
              <span>
                Link list disabled
              </span>
            </a>
          </li>
          <li>
            <a
              class="medium list-item"
            >
              <span>
                Link list
              </span>
            </a>
          </li>
          <li>
            <a
              class="medium list-item"
            >
              <span>
                Link list
              </span>
            </a>
          </li>
        </ul>
      </div>
      <div
        class="sidebar-linklist-wrapper linklist-secondary"
      />
      <div
        class="link-list-wrapper"
      >
        <ul
          class="link-list"
        >
          <li>
            <a
              class="list-item"
            >
              <span>
                Secondary item
              </span>
            </a>
          </li>
          <li>
            <a
              class="active list-item"
            >
              <span>
                Secondary item active
              </span>
            </a>
          </li>
          <li>
            <a
              class="disabled list-item"
            >
              <span>
                Secondary item disabled
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
